FrostWire 1.5.0 - MARCH/24/2015
 - Upgraded frostwire-jlibtorrent to the latest code from libtorrent.
 - Fixes bug where songs that were deleted were not being cleared from playlists.
 - Fixes bug where sharing on WiFi from certain 3rd-party file explorers wouldn't work.
 - Fixes bug where file descriptors fetched by content:// uris wouldn't have a disk path available.
 - Fixes 2 crashes on music player.
 - Chinese, Polish, Spanish translations update.

FrostWire 1.4.9 - MARCH/03/2015
 - New KAT search.
 - Fixed BTJunkie search issues causing ANR crashes.
 - Fixed Mininova search. Few results coming in due to low seed numbers.
 - Removed Appia Search.
 - Clean up: Removed Appia, RevMob, Google In-App purchasing libraries.
 - Updated Croatian translation. Thanks @win32re.
 - Refactors, cleanup, misc fixes.

FrostWire 1.4.8 - FEBRUARY/25/2015
 - Fixes YT file save issue.

FrostWire 1.4.7 - FEBRUARY/23/2015
 - TPB search fixed.
 - Monova search fixed.
 - Removed Support FrostWire controls.
 - SoundCloud download issue fixed.
 - RevMob integration.
 - Crashes and bug fixes.
 - Croatian translation update.

FrostWire 1.4.6 - FEBRUARY/09/2015
 - Fixes issue where finished torrents would re-download the last pieces on startup.
 - Updated Picasso image caching library.

FrostWire 1.4.5 - FEBRUARY/06/2015
 - Youtube search improvements.
 - Removed Torrents.fm search, service was shutdown.
 - Fixes issue when removing last song on a playlist.

FrostWire 1.4.4 - JANUARY/29/2015
 - Finished transfers no longer should show as paused.
 - Fixes issue adding a whole torrent after having added a single
   file belonging to that same torrent to transfers. Now the whole
   torrent will be downloaded as expected.
 - Fixes Out of memory errors on MobileCore library.
 - Fixes possible crash when exiting the app right after launching it.
 - If storage location has ran out of space available FrostWire
   will show a descriptive error message explaining why the download
   has failed.