@@ -32,13 +32,13 @@ public final class Constants {
     private Constants() {
     }
 
-    public static final byte[] FROSTWIRE_VERSION = { (byte) 1, (byte) 4, (byte) 9 };
+    public static final byte[] FROSTWIRE_VERSION = { (byte) 1, (byte) 5, (byte) 0 };
 
     public static final String FROSTWIRE_VERSION_STRING = FROSTWIRE_VERSION[0] + "." + FROSTWIRE_VERSION[1] + "." + FROSTWIRE_VERSION[2];
 
     /** should manually match the manifest, here for convenience so we can ask for it from static contexts without
      * needing to pass the Android app context to obtain the PackageManager instance.  */
-    public static final String FROSTWIRE_BUILD = "176";
+    public static final String FROSTWIRE_BUILD = "177";
 
     public static final boolean IS_AMAZON_DISTRIBUTION = false;
     
